--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=superstore
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/superstore
+spring.datasource.username=root
+spring.datasource.password= root
+
+spring.jpa. show-sql=true
+spring.jpa.hibernate.ddl-auto=update
